Email Integration. Change Org-Party system property key

--- a/apache-ofbiz-16.11.05/hot-deploy/admin/config/admin.properties
+++ b/apache-ofbiz-16.11.05/hot-deploy/admin/config/admin.properties
@@ -6,3 +6,5 @@ reset.password.token.expiry=1440
 # secret key to generate AWT
 reset.password.token.jwt.secret.key=APSECRET@987
 
+# Key for SystemProperty to hold Tenant Organization Party Id
+customer.organization.party.key=ORGANIZATION_PARTY_ID
