--- a/apache-ofbiz-16.11.05/build.gradle
+++ b/apache-ofbiz-16.11.05/build.gradle
@@ -135,6 +135,7 @@ dependencies {
     compile 'org.jsoup:jsoup:1.11.2'
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.18'
     compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+    compile group: 'org.ocpsoft.prettytime', name: 'prettytime', version: '4.0.2.Final'
 
     // ofbiz unit-test compile libs
     testCompile 'org.mockito:mockito-core:1.+'
