--- a/apache-ofbiz-16.11.05/settings.gradle
+++ b/apache-ofbiz-16.11.05/settings.gradle
@@ -18,7 +18,7 @@
  */
 
 apply from: 'common.gradle'
-rootProject.name = 'ofbiz'
+rootProject.name = 'autopatt-ofbiz'
 
 iterateOverActiveComponents { File component ->
     def osName = System.getProperty('os.name').toLowerCase()
