changed regex to support policy

--- a/apache-ofbiz-16.11.05/framework/security/config/security.properties
+++ b/apache-ofbiz-16.11.05/framework/security/config/security.properties
@@ -25,7 +25,7 @@ password.length.min=5
 
 ###  -- pattern based password OFBIZ-4958
 security.login.password.pattern.enable=true
-security.login.password.pattern=^.*(?=.{5,}).*$
+security.login.password.pattern=^(?=.*[A-Z])(?=.*[!@#\\$%\\^&\\*]).{8,}
 # This is a mix to handle the localisation of the OOTB pattern which is only a fixed length
 security.login.password.pattern.description=loginservices.password_must_be_least_characters_long
 # -- For More restrictive pattern you can use the following, no localisation-
