addressed review comments

--- a/apache-ofbiz-16.11.05/hot-deploy/admin/config/admin.properties
+++ b/apache-ofbiz-16.11.05/hot-deploy/admin/config/admin.properties
@@ -8,3 +8,6 @@ reset.password.token.jwt.secret.key=APSECRET@987
 
 # Key for SystemProperty to hold Tenant Organization Party Id
 customer.organization.party.key=ORGANIZATION_PARTY_ID
+
+# Password minimum length
+password.min.length=8
